--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,7 @@ header {
   font-weight: 500;
   color: #2e2f42;
   text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .navlink:hover {
   color: #404bbf;
@@ -64,14 +65,14 @@ header {
   color: #404bbf;
   text-decoration: underline;
 }
-.navlink:active:after{
+.navlink:active:after {
   content: "";
   display: block;
-  width:48px;
+  width: 48px;
   height: 4px;
-  background-color:#404bbf ;
+  background-color: #404bbf;
   border-radius: 2px;
-  position:relative;
+  position: relative;
   top: 20px;
 }
 .info {
@@ -82,6 +83,7 @@ header {
   text-decoration: none;
   list-style-type: none;
   color: #434455;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-li:hover {
   color: #404bbf;
@@ -119,6 +121,7 @@ header {
   text-align: center;
   border: none;
   cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .service-button:hover {
   background-color: #404bbf;
@@ -147,22 +150,19 @@ header {
   text-align: center;
   padding: 120px 0;
 }
-.team-member{  
-   background-color: #ffffff;
+.team-member {
+  background-color: #ffffff;
   width: 264px;
- border-bottom-left-radius: 4px;
+  border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-              0 1px 1px 0 rgba(46, 47, 66, 0.16),
-              0 1px 6px 0 rgba(46, 47, 66, 0.08);
-  
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
-.team-member img{
+.team-member img {
   display: block;
   width: 100%;
 }
-.members { 
-  
+.members {
   display: inline-flex;
   flex-direction: row;
   gap: 24px;
@@ -198,11 +198,11 @@ header {
   gap: 24px;
   justify-content: center;
 }
-.portfoliolist img{
+.portfoliolist img {
   display: block;
   width: 100%;
 }
-.card-header{
+.card-header {
   border-width: 0 1px 1px 1px;
   border-color: #e7e9fc;
   border-style: solid;
@@ -229,7 +229,6 @@ header {
 
 .page-footer p {
   width: 264px;
-  
 }
 .footer-logo {
   font-family: Raleway, sans-serif;
@@ -240,23 +239,23 @@ header {
   letter-spacing: 0.5;
   line-height: 1.2;
 }
-.box{
+.box {
   width: 264px;
   height: 112px;
-  background-color: #F4F4FD;
-  border: 1px solid #8E8F99;
+  background-color: #f4f4fd;
+  border: 1px solid #8e8f99;
   border-radius: 4px;
 }
 /*-------------Team Member Social Media SVG -----------*/
-.social-media{
-  display:flex;
+.social-media {
+  display: flex;
   gap: 24px;
   align-items: center;
   justify-content: center;
   list-style-type: none;
   margin: 8px;
 }
-.social-media .social-media-icons{
+.social-media .social-media-icons {
   width: 40px;
   height: 40px;
   display: flex;
@@ -264,43 +263,42 @@ header {
   justify-content: center;
   background-color: #4d5ae5;
   border-radius: 50%;
-  margin-bottom: 32px ; 
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-bottom: 32px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.icon{
+.icon {
   width: 16px;
   height: 16px;
 }
-.social-media .social-media-icons:hover{
+.social-media .social-media-icons:hover {
   background-color: #404bbf;
-  transform: translateY(0);
 }
 /*-----------------------------------*/
 
 /*Section Icon*/
-.box{
-   display: flex;
+.box {
+  display: flex;
   align-items: center;
   justify-content: center;
 }
-.icon-antenna, .icon-clock, .icon-diagram, .icon-astronaut{
+.icon-antenna,
+.icon-clock,
+.icon-diagram,
+.icon-astronaut {
   width: 64px;
   height: 64px;
- 
 }
 /*---------------------*/
 
 /*Footer Social Media Icons*/
-.social-icon{
+.social-icon {
   margin-left: 120px;
 }
-.footer-icons{
+.footer-icons {
   display: flex;
   gap: 16px;
- 
 }
-.footer-social-icon{
+.footer-social-icon {
   list-style-type: none;
   background-color: #4d5ae5;
   border-radius: 50%;
@@ -310,45 +308,41 @@ header {
   width: 40px;
   height: 40px;
   margin-top: 16px;
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
- 
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer-social-icon:hover{
-  background-color: #31D0AA;
-  transform: translateY(0);
+.footer-social-icon:hover {
+  background-color: #31d0aa;
 }
-.footer-social-icon .icon{
+.footer-social-icon .icon {
   width: 24px;
   height: 24px;
 }
 
 /*----Team Section 2D Dönüşümler-----*/
 
-.img-box{
+.img-box {
   position: relative;
   overflow: hidden;
 }
-.img-box:hover .overlay{
- transform: translateY(0);
+.img-box:hover .overlay {
+  transform: translateY(0);
 }
-.portfolio-card:hover{
+.portfolio-card:hover {
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-              0 1px 1px 0 rgba(46, 47, 66, 0.16),
-              0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
-.overlay{
+.overlay {
   position: absolute;
-    top:0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 8px;
   background-color: #3f51b5;
   cursor: pointer;
-  color:rgba(255, 255, 255, 1);
+  color: rgba(255, 255, 255, 1);
   font-weight: 400;
   font-size: 16px;
 }
